 * src/keybindings.c, src/keybindings.h, src/prefs.c:
   Use a TreeView for keybinding list in the preferences dialog and add
   descriptive sections for better usability.
 * src/keybindings.c: Use Ctrl-B for Goto matching brace.
 * src/symbols.c, tagmanager/php.c:
   Use CTags SVN version of PHP parser.
   Use only supported symbol types in the symbol view for PHP.


2007-07-08  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/dialogs.c: Fix missing descriptive text in message box when
                  closing an unsaved file on Windows.


2007-07-07  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/editor.c:
   Include new line character(s) when selecting a paragraph.
 * doc/geany.docbook, src/document.c, src/editor.c, src/editor.h,
   src/keybindings.c, src/keybindings.h:
   Add keybinding for Select, Transpose, Cut, Copy and Delete line.
 * src/keybindings.c: Change default shortcut for Find Next/Previous to
                      Ctrl-G and Ctrl-Shift-G.
 * src/editor.c, src/geany.h:
   Use an extra space after comment toggle mark.
   Also comment blank lines when using toggle comment.
   Also comment already commented lines when using toggle comment.
   Fix some selection issues when using toggle comment.


2007-07-07  Nick Treleaven  <nick.treleaven@btinternet.com>

 * scintilla/ScintillaGTK.cxx, src/highlighting.c, doc/geany.docbook,
   data/filetypes.common:
   Make Scintilla's move to word commands use the word end boundaries
   when moving to the right (like e.g. GtkEntry).
   Treat punctuation chars as whitespace.
   Add filetypes.common setting: whitespace_chars.
 * src/highlighting.c, data/filetypes.python:
   Add decorator (and word2) styling for Python.
 * src/interface.c, src/prefs.c, geany.glade:
   Move Context Action command to Tools tab, group with Print command.


2007-07-06  Enrico Tröger  <enrico.troeger@uvena.de>

 * doc/geany.docbook, src/editor.c, src/editor.h, src/keybindings.c,